--- a/_posts/2022-03-11-INMEDIA-順豐今日起暫停收寄香港至內地的所有快件-直至另行通知.html
+++ b/_posts/2022-03-11-INMEDIA-順豐今日起暫停收寄香港至內地的所有快件-直至另行通知.html
@@ -13,6 +13,11 @@ author: 獨媒報導
 <p><strong>順豐上周日發文：前線同事超負荷運轉</strong></p>
 <p>順豐於上周日（6日）曾向香港客戶發文指，近期疫情持續嚴峻，順豐每一天都要面對不可預期的狀況，同時要應付激增的速運需求量，儘管動員所有可用的人員也沒法滿足需求。順豐又指，現時公司整體營運均面對巨大的壓力，各前線同事都在超負荷運轉，客服中心每天解答上萬個心急如焚的客戶查詢，竭力安撫客戶各種不安的情緒、甚至被謾罵，公司深知還有很多不足和需要改善的空間。</p>
 <p>順豐表示，相信整個物流業界等相關行業的同濟也正面對同一樣的處境，故盼客戶多體諒及包容，共同克服困難及聯防抗疫。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/bu1q73" title="IMG_20220311_164135_497"><img src="https://live.staticflickr.com/65535/51931736844_3ac091f670_z.jpg" width="640" alt="IMG_20220311_164135_497" /></a></p>
+<p>記者下午到旺角一帶的順豐站視察，有經營香港和內地批發生意的林先生，原打算寄出一些音樂光碟、膠盒和加工貨品給兩地客戶，得悉內地快件停止寄收後，無奈指生意受影響，需取消內地訂單及退回按金。他指日前順豐暫停上門送遞，部分客戶非常不滿，坦言自己無辜被罵，「佢哋有啲係直接X，好啲嘅客就話會繼續等。」他坦言對短期內順豐能恢復正常服務不抱太大希望，「（疫情情況）日日都變，可能今日得，聽日就唔得」。</p>
+<p><strong>有寄件商戶轉用其他物流公司</strong></p>
+<p>從事零售生意的陳先生指，公司的香港代理商寄往內地的快件，需轉用另一間公司派送，已通知商戶快件需延遲三日至一星期才能送達，而客戶都理解現時情況。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rAE4Me" title="IMG_20220311_164125_437"><img src="https://live.staticflickr.com/65535/51930422992_b6249673c6_z.jpg" width="640" alt="IMG_20220311_164125_437" /></a></p>
 <p><strong>郵政本周一已暫停本地速遞及包裹服務</strong></p>
 <p>另外，香港郵政於上周六（5日）宣布，自本周一（7日）起暫停本地郵政速遞及本地包裹服務，直至另行通知。</p>
 </div></div></div>
