--- a/_posts/2022-03-11-INMEDIA-兄長染疫離世-梁美芬促-緊急法-豁免內地版連花清瘟膠囊註冊.html
+++ b/_posts/2022-03-11-INMEDIA-兄長染疫離世-梁美芬促-緊急法-豁免內地版連花清瘟膠囊註冊.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220311LMF.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>第五波疫情死亡人數每日破百，經民聯梁美芬在今日的立法會衞生事務委員會上，重提其63歲兄長染疫居家隔離期間離世，並大推「連花清瘟膠囊」，指街坊吃了她提供的「連花」後，情況有好轉：「佢話我救返佢個囡、同埋佢個囡嗰兩個仔」，要求使用《緊急法》，豁免未有在港註冊的內地版「連花清瘟膠囊」。</p>
-<p>食物及衞生局局長陳肇始陳肇始稱，除中央支援的中成藥外，現時仍有「其他唔同方面得到嘅中藥」，指衞生署有責任保障市民，但同時明白藥物需求殷切，承諾會與政務司司長商討如何處理藥物註冊問題。</p>
+<p>食物及衞生局局長陳肇始稱，除中央支援的中成藥外，現時仍有「其他唔同方面得到嘅中藥」，指衞生署有責任保障市民，但同時明白藥物需求殷切，承諾會與政務司司長商討如何處理藥物註冊問題。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/r01sx3" title="無標題"><img src="https://live.staticflickr.com/65535/51931347033_df5f5ea220_z.jpg" width="640" alt="無標題" /></a></p>
 <p><strong>梁美芬稱63歲兄長染疫逝 </strong></p>
 <p>梁美芬在3月8日的立法會「與預防及控制疾病相關的附屬法例小組委員會」上提及一名親人染疫後聽從當局指引在家隔離，但最終離世。她今日在會上再提及該親人為63歲的兄長，指兄長沒有長期病患，接種了第一劑疫苗，起初只是輕症，並跟隨當局指引在家隔離，但後來病情突然惡化，送院後不治。</p>
