--- a/_posts/2022-03-12-INMEDIA-不再派發電子手環-林鄭-不能視為漏洞-當局會抽查.html
+++ b/_posts/2022-03-12-INMEDIA-不再派發電子手環-林鄭-不能視為漏洞-當局會抽查.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_187.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>行政長官林鄭月娥今早在「十一點疫情記者會」上，被問到不再派發電子手環的原因，指是經衛生防護中心及他們評估後的決定，但稱不能視為漏洞，當局仍會作抽查，確保確診者無離開家居。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_187.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>行政長官林鄭月娥今早在「十一點抗疫記者會」上，被問到不再派發電子手環的原因，指是經衛生防護中心及他們評估後的決定，但稱不能視為漏洞，當局仍會作抽查，確保確診者無離開家居。</p>
 <p><strong>繼續半個鐘開場發言盤點</strong></p>
 <p>行政長官林鄭月娥連續第四日舉行「十一點抗疫記者會」，今日聯同出席的包括運輸及房屋局局長陳帆和商務及經濟發展局局長邱騰華，議題為物資供應。記者會開場發言一如過去三日，繼續大篇幅盤點政府工作。</p>
 <p>林鄭月娥指在新一波疫情、向中央提出要求後，內地做到「香港所需、中央必應、照單全收」。她指本港提出的物資請求是以清單形式，包括醫療儀器以至口罩，而商務及經濟發展局局長確保醫療物資，運輸及房屋局局長除確保其他物資供應，亦包括開拓更多物流方式。</p>
