--- a/_posts/2022-03-12-INITIUM-护士为病逝者抹身-疫战里的安魂曲-他们走得很孤单.html
+++ b/_posts/2022-03-12-INITIUM-护士为病逝者抹身-疫战里的安魂曲-他们走得很孤单.html
@@ -9,7 +9,7 @@ author: 特约撰稿人 冼丽婷 发自香港
 ---
 
 <p>「“他们是挑错死的时候。”」</p><p>特约撰稿人 冼丽婷 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220313-hongkong-the-death-and-the-nurse/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/8d5751a59a1d402387197e8a5650fffe.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p><small>（编按︰文章原于2022年3月8日刊于作者冼丽婷的Patreon“<a href="https://www.pateron.com/SinLaiTing">WriteHouse 写字为家</a>”，文中有关第五波疫情的数据，乃3月8日前的数字。）</small></p>
+            <figcaption itemprop="caption">2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p><small>（编按︰文章原于2022年3月8日刊于作者冼丽婷的Patreon“<a href="https://www.patreon.com/SinLaiTing">WriteHouse 写字为家</a>”，文中有关第五波疫情的数据，乃3月8日前的数字。）</small></p>
 <p>第五波疫情下，香港公立医院急症室成人间炼狱。一天超过200宗染疫死亡数字，令人心痛又心寒。脆弱的病人，时间不在他们那边，一两天，就可以濒临死亡边缘。但急症室战场上的现实是，病人4、5天才能被送上病房。斗长命，能送上病房的，已像打了一场仗。默默死去的，殓房也不能容身。</p>
 <p>公立医院女护士Jane（化名）说，这个时候死，太惨。有时，她会跟刚去世的病人遗体说：“你女儿好锡（疼惜）你，只是现在不准来探访……”</p>
 <p>公共医疗系统还能保护老病弱势？前线医护是孤军作战？能不能调派其他人手增援？Jane在3月初接受笔者电话访问，讲述了个多月来疲乏沮丧的心声。</p>
@@ -18,8 +18,8 @@ author: 特约撰稿人 冼丽婷 发自香港
 <p>“我帮你抹一下身体，希望你舒服一点，其实，你个女好锡你，但现在是不能让她来看你。”Jane难过这时候病逝的人，走得太孤单了，为遗体清洁之时，会捉住去世病人的手，讲这类说话。</p>
 <p>医学上，人最后消失的是听觉。Jane没信仰，但也会想，病人的灵魂，可能在附近，静静听着。她在香港的公立医院任职护士10多年，现时处理急症内科病房工作。</p>
 <p>Covid-19疫情，按卫生防护中心3月5日数字显示，1774人死亡，一日新增220人死亡，累计阳性检测个案约44万多宗，确诊个案约18万7千多宗，住院人数是7215。每天死亡数字从数十至过百人，最终超越了200人，其中七成是80岁以上长者。停尸间、殓房不够空位，要由食环署用货柜把尸体移走冷藏，尽快火化。</p>
-<p>Jane没想过死亡数字会这样高，“最初想，可能每天是几十死亡人数。”公立医院接收的，都是最弱势的病人，年老或是长期病患。这个时候死，就连殓房都无法给容身，遗体放货柜冷藏。如果是家属，有多难过。本来生死难免，作为医护，Jane也感触这个时候去世，是有点凄凉。
-“他们是挑错死的时候。”Jane说。</p>
+<p>Jane没想过死亡数字会这样高，“最初想，可能每天是几十死亡人数。”公立医院接收的，都是最弱势的病人，年老或是长期病患。这个时候死，就连殓房都无法给容身，遗体放货柜冷藏。如果是家属，有多难过。本来生死难免，作为医护，Jane也感触这个时候去世，是有点凄凉。</p>
+<p>“他们是挑错死的时候。”Jane说。</p>
 <p>因为具传染性，染疫病人遗体，要用两个尸袋包裹。平日只用一个绿色的，现在先套一个透明的，再套绿色的。家人认尸时，只打开外面绿色袋，从透明胶袋外辨认亲人。疫下从生至死，完全是隔离，肉身的隔离，触感的隔离，永远的隔离，这是瘟疫蔓延时候无法弥补的创伤。</p>
 <p>Jane修读护士专科时，读过安慰病人的理论。在行军一样的医院病房，亦会尽力保护病人及安慰他们，包括善终。有一种没有写在规条的做法是，但凡知道病者情况恶化，快到临终，一定会通知家人，Jane相信，这是所有医院护士都会做的。</p>
 <p>即使现在病房像打仗，只要情况许可，医护都会尽量每几日让家属透过视频见一下患病亲人。但对于病情急速恶化的病人，最终只能孤单离世，在家属能视频之时，已不是对话，是见最后遗容。这些家属，在屏幕前伤心落泪，看着亲人，不能到场碰一下、亲一下。最后，只能向亲人旁边的护士说声感谢。不同家属，不同反应，有些不明白现时医院禁止探访的规例，破口大骂，直呼她们是黑心医护。</p>
@@ -27,7 +27,7 @@ author: 特约撰稿人 冼丽婷 发自香港
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220313-hongkong-the-death-and-the-nurse/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/820dec11db8648da8bf66fe9251789eb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年2月16日，明爱医院在急症室旁边的露天空地设立隔离区，不少长者病人卧在病床上等待覆检，医护人员需要在露天环境照料患者。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年2月16日，明爱医院在急症室旁边的露天空地设立隔离区，不少长者病人卧在病床上等待覆检，医护人员需要在露天环境照料患者。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
 
-<p>外间形容，公立医院何止战场，已成人间炼狱。有报导说老人家在急症室等候5天仍然未能上病房，最终离世。Jane眼能看到的，就是病人的苦况。有一次，接收一位分流到内科的年老病人，“佢条尿片湿到......不单止背脊全湿，几乎是湿到上头！”大多数被送上病房的病人，已经一阵尿臭味。</p>
+<p>外间形容，公立医院何止战场，已成人间炼狱。有报导说老人家在急症室等候5天仍然未能上病房，最终离世。Jane眼能看到的，就是病人的苦况。有一次，接收一位分流到内科的年老病人，“他的尿片湿到......不单背部全湿，几乎是头都是湿的！”大多数被送上病房的病人，已经一阵尿臭味。</p>
 <p>她认为不能怪急症室，同事咬紧牙关在打仗，除了为病人提供医药及食物等基本照顾，迫于无奈，可能无法顾及完善护理。“所以，大多数能从急症室上来的病人，可能已在监察病房等了4、5天，非常辛苦，一样是打了一场仗，好不容易才能得到床位，我们其实好心疼，会好锡他们的。”</p>
 <h2>送进医院，像场不知生死的赌博</h2>
 <p>负责经急症室分流的内科病房，Jane刚调任处理疫症危重病人，繁重的工作，冲锋陷阵，经常4、5小时没喝一滴水，这只是微小细节，但足够引起忧虑，有时感觉喉咙干痛，也不敢细想是不是受感染的征状，为了家中1岁女儿，只能定时为自己作快速检测。</p>
@@ -43,13 +43,13 @@ author: 特约撰稿人 冼丽婷 发自香港
 <p>但说到长辈，她默然，再叹息，因为，已很久很久没探望父母。</p>
 <p>做尽一切， 以为力保不失，谁知，过去的3月4日，丈夫确诊，为了女儿安全，他立刻搬离住所，Jane则继续留家，隔离7天。本来已经工作负荷沉重的急症内科病房，再少一员有经验的猛将，她致电同事交待工作后续细节，有些说话，不能不说：“真的很不好意思，要你们自己去打仗，我过几日就会回来了。”</p>
 <p>Joan Didion在《Vogue》任记者时的初出道文章，谈到甚么叫self-respect。她说这是个人品格的重要特质，为自己决定要做的事情，负起责任，就是对自己的重尊。Jane喜欢护士工作，愿意付出，重视责任，使命感换来的是满足感，这就是一种self-respect。</p>
-<p>但这一次，她对整个抗疫管理安排感到沮丧，在急症团队里，像是孤军里的哀兵，看不见希望。
-疫下之仗，如果真要救命，行军调将，调配人手资源，并且用得其所，非常重要。不能只靠前线医护，前赴后继。Jane身处前线的体验是，不少医院属下门诊非紧急服务，部份专科门诊的社区护士、生育计划服务等，都已暂停，这些医护有直接处理病人服务的丰富经验，她认为，可以把空出的人手，调往急症及相关病房工作，共渡难关。</p>
+<p>但这一次，她对整个抗疫管理安排感到沮丧，在急症团队里，像是孤军里的哀兵，看不见希望。</p>
+<p>疫下之仗，如果真要救命，行军调将，调配人手资源，并且用得其所，非常重要。不能只靠前线医护，前赴后继。Jane身处前线的体验是，不少医院属下门诊非紧急服务，部份专科门诊的社区护士、生育计划服务等，都已暂停，这些医护有直接处理病人服务的丰富经验，她认为，可以把空出的人手，调往急症及相关病房工作，共渡难关。</p>
 <p>李嘉诚捐出的几千万资助私家医院服务，Jane相信根本对水深火热的弱势病人是没有帮助。因为，她所见，私家医院只接收公立医院接近康复的病人。确诊、检测呈阳性、有发烧有病征的病人，通通不会接收。至于退休医护义工，她认为，他们脱离“行军”工作已久，在“战场”不容易跟上，或许只能帮忙注射疫苗。</p>
 <p>有前辈对她说，这一次疫情，不比沙士时候惨烈，当时，病房里的人，真的笑不出来。但个多月来的经历，令Jane对在香港当医护的热诚出现变化。第一波疫情给予医护酒店住宿隔离及补偿津贴等福利，无声无息取消<small> ( 编按︰医管局最近恢复了相关措施，惟未知实际安排）</small>。她这一代人，对管理的合理性反应是很大的。原本带着使命来做这份工，辛劳是预计之内，可是在抵受里外压力下，管理层一些政策措施，令她感觉愤怒。</p>
 <h2>最怕是心死了</h2>
 <p>愤怒源于一系列不合乎科学的措施，令她感觉在战场上拼命的前线员工不受尊重。为了应付人手问题，管理层把员工感染或成密切接触者的隔离日数，早就定在7日而非当时官方规定的14日；作为紧密接触病人的医护，检测方法，是用不完全可靠的快速测试，而非RT-PCR Test深喉唾液核酸测试；有些管理层，甚至要员工即时在视频中显示快速测试结果，令员工感觉很不被信任。</p>
 <p>抗疫战场上的经历、体验及听闻的，两次电话访问，她自觉只能讲出很小部份的惨况。心中虚脱，一环扣一环，最怕是心死了。“你认为还有甚么可以协助你们吗？”她听了后，唉一声，欲语还休，感觉得到，真的气馁了。</p>
-<p>“Omicron传播性好大，怎么一点准备都没有，测试包、隔离设施，应该一早预备。 好多嘢，应该事先做好，现在先讲，有乜嘢用？”</p>
+<p>“Omicron传播性好大，怎么一点准备都没有，测试包、隔离设施，应该一早预备。 好多东西，应该事先做好，现在才来说，有甚么用？”</p>
 <p>说到底，搁在心里的，又再浮面。一直避而不想的移民问题，被这亲身一课，直接改变了思维。原本，她对政治问题没有多大感觉，不打算走，只想好好跟上一代与下一代留港生活，认同为香港病人提供人性化服务是很有意义。但经过这一趟实质测试，感觉是诚实的，她能与辛劳共存，无法与制度文化共存，为了女儿，无法，不思考移民去路。</p>
 <p><small>（编按︰3月11日，Jane的爷爷也因染疫去世。）</small></p><figure class="image"><a class="image" href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchpic" target="_blank"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/initium_plus_app.png?imageView2/1/w/2538/h/2039/format/jpg" referrerpolicy="no-referrer"></a></figure><p><small class="u-font-sans">我们推出<a href="https://theinitium.com/subscription/initium_plus/?utm_source=initium/?utm_medium=article/?utm_campaign=1stlaunchbottom%20target=" _blank">端 Plus 会员计划</a>，邀请你们成为独立新闻的守护者，帮助我们守护端，也帮助我们继续守护各地独立记者，支持他们产出更多优质的华文调查报导。</small></p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
