--- a/_posts/2022-03-13-INMEDIA-林鄭-估計逾30萬人家居隔離.html
+++ b/_posts/2022-03-13-INMEDIA-林鄭-估計逾30萬人家居隔離.html
@@ -43,4 +43,4 @@ author: 獨媒報導
 <p>林鄭月娥重申目前是「打仗」，「每一個行動都要快」，故已制訂《緊急法》豁免與抗疫相關的工作。，而豁免的權力授予政務司司長李家超。她稱手頭上無相關資料，但指「呢啲跨境貨車嚟香港係為咗邊個呢？」她表示是為香港市民送上鮮活食品及物資，重申「抗疫是壓倒一切的任務」。</p>
 <p>對於內地出現的疫情，林鄭月娥指相信中央能有力應對，暫時亦對本港支援並無影響，但國家衞健委新冠疫情應對處置工作領導小組專家組組長梁萬年已於昨日返回北京。</p>
 <p>相關報導：<br /><a href="https://bit.ly/3t2xIcV">物資包將加入止痛退燒藥 下周起指定診所處方新冠口服藥</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
