Update VOCUS 2022-03-15 patch

--- a/_posts/2022-03-03-VOCUS-金融戰-制裁俄羅斯-一場無本位貨幣的實驗.html
+++ b/_posts/2022-03-03-VOCUS-金融戰-制裁俄羅斯-一場無本位貨幣的實驗.html
@@ -8,7 +8,7 @@ tags: blog
 author: REDBRIC
 ---
 
-<iframe class="embedly-embed" src="https://www.youtube.com/embed/gahqSRvcfwY" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="100%" frameborder="0"></iframe>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/gahqSRvcfwY" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="522" height="294" frameborder="0"></iframe>
 <p>2022年2月24日俄羅斯入侵烏克蘭，歐美各國團結一致，相繼實施多項制裁措施，包括禁運、禁飛、停止貿易、把俄羅斯剔出SWIFT系統及凍結俄羅斯的外匯儲備等，首日引發俄羅斯股市崩盤，盧布急跌，利率颷升，若制裁持續，估計將會導致俄羅斯的經濟衰退，通貨膨脹率急升等，其中以盧布大幅貶值引發銀行擠提，令金融體系不穩，央行連番救市，成為一場無本位貨幣制度的實驗。</p>
 <h2>股市下跌</h2>
 <p>圖1是俄羅斯股市MOEX指數，戰事導致股價由2月16日的3622點直插2月24日的2060點，跌幅超過四成！然而，獨裁國家有大量方法阻止股市下跌，包括停市、限制出售股票及出動國家資金入市買貨等，因此，現時的股價已回升400多點。而且，過去多年股市持續上升，即使經過這番急跌，股價仍高於2018年的水平，下跌反映恐慌情緒，對經濟未必有實質影響。</p>
