--- a/_posts/2022-03-09-VOCUS-石油危機五十年.html
+++ b/_posts/2022-03-09-VOCUS-石油危機五十年.html
@@ -8,7 +8,7 @@ tags: blog
 author: REDBRIC
 ---
 
-<iframe class="embedly-embed" src="//https://www.youtube.com/embed/ivr1DjDDgNI" scrolling="no" title="YouTube embed" allow="autoplay; fullscreen" allowfullscreen="true" width="522" height="294" frameborder="0"></iframe> 
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/ivr1DjDDgNI" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="522" height="294" frameborder="0"></iframe> 
 <div class="draft-block draft--p left">
             二次世界大戰結束後，全球在重建國際關係上建立了多項重要制度，包括成立聯合國，簽定布雷頓森林協議，確立國際貿易關係的關貿總協定及通過以美元為中心的類金本位貨幣制度等，為二戰後的二十五年帶來經濟復甦。
           </div>
