--- a/_posts/2022-03-15-INMEDIA-香港民研-林鄭最新民望26.6分-創近2年新低.html
+++ b/_posts/2022-03-15-INMEDIA-香港民研-林鄭最新民望26.6分-創近2年新低.html
@@ -9,11 +9,11 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/CC_5.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>香港民意研究所今日（15日）發佈行政長官、各司局長的最新民望，特首林鄭月娥最新民望只有26.6分，為近2年來的新低，其中四成人給予零分。香港民意研究所副行政總裁鍾劍華指出，政府的失誤、民意低迷實為「政策造成的結果」。</p>
-<p>調查於今月7至11日進行，以電話隨機訪問1,000位18歲或以上操粵語的香港居民。結果顯示，特首林鄭月娥得分26.6分，比上月下降5.2分，是自2020年4月以來新低。當中41％的受訪者給予林鄭零分，其支持率為12%，反對率78%，支持率淨值為-67，較上次下跌14%。和前任特首比較，林鄭近半年評分比過往三任特首還要低。</p>
+<p>調查於今月7至11日進行，以電話隨機訪問1,000位18歲或以上操粵語的香港居民。結果顯示，特首林鄭月娥得分26.6分，比上月下降5.2分，是自2020年4月以來新低。當中41％的受訪者給予林鄭零分，其支持率為12%，反對率78%，支持率淨值為-67％，較上次下跌14%。和前任特首比較，林鄭近半年評分比過往三任特首還要低。</p>
 <p><strong>陳茂波民望創新高</strong></p>
 <p>在三位司長中，財政司司長陳茂波獲最高的44.7分；其次是政務司司長李家超，得34.8分；最後則為得26.6分的律政司司長鄭若驊。除陳茂波外，李家超及鄭若驊支持率淨值均錄負數，分別是-14%及-39%。陳茂波民望則創個人記錄新高，支持率淨值為11%。</p>
 <p><strong>陳肇始包尾</strong></p>
-<p>至於問責局長，由於是次調查於民政事務局局長徐英偉離任後進行，故調查結果並不包括民政事務局。餘下12位局長中，只有4人支持率淨值錄正數，分別是環境局局長黃錦星、財經事務及庫務局局長許正宇、公務員事務局局長聶德權及商務及經濟發展局局長，升輻約2至7%。支持率狂跌至-42%、包尾的則為食物及衞生局局長陳肇始，創個人紀錄新低。</p>
+<p>至於問責局長，由於是次調查於民政事務局局長徐英偉離任後進行，故調查結果並不包括民政事務局。餘下12位局長中，只有4人支持率淨值錄正數，分別是環境局局長黃錦星、財經事務及庫務局局長許正宇、公務員事務局局長聶德權及商務及經濟發展局局長邱騰華，升輻約2至7%。支持率狂跌至-42%、包尾的則為食物及衞生局局長陳肇始，創個人紀錄新低。</p>
 <p><strong>鍾劍華：林鄭團隊抗疫表現令人失望</strong></p>
 <p>鍾劍華分析指，林鄭支持度創近兩年新低，加上陳肇始得分創上任以來新低，與市民不滿疫情變化有關。鍾提到，疫情往往是政府重新爭取市民支持的最好機會，但奈何政府近一年來表現令人相當失望。近月政府因應疫情沿用《緊急法》豁免多項規定，鍾批評政府用打仗為由就「乜慣例都唔理」，引起不同界別不滿。調查亦顯示政府號召力不足，難令市民忍耐疫情。</p>
 <p>葵青區議會前副主席張文龍同樣認為，數據反映市民對政府抗疫能力不滿。他提到自2月初Omicron出現在社會後，林鄭帶領下的政府團隊各自為政。他指領取檢測包及確診者支援熱線工作分散，導致市民未能收到明確而集中的資訊。</p>
