--- a/_posts/2022-03-15-INITIUM-早报-波兰-捷克和斯洛文尼亚总理抵基辅会见泽连斯基-俄罗斯制裁拜登.html
+++ b/_posts/2022-03-15-INITIUM-早报-波兰-捷克和斯洛文尼亚总理抵基辅会见泽连斯基-俄罗斯制裁拜登.html
@@ -14,7 +14,7 @@ author:
 <p><a href="https://www.bbc.com/news/world-europe-60757157">BBC指</a>，三国总理周二晚抵达乌克兰，当时基辅正处于35小时宵禁。乌克兰方面赞赏三国领导人的勇气，当基辅正面临俄军进一步攻击时，他们从波兰乘火车前来表达支持。</p>
 <p>发起这次行程的莫拉维茨基还在推文中称，欧洲必须明白，失去乌克兰的欧洲将不再是欧洲，而会成为一个被打败、被羞辱、可悲的过去的自己。</p>
 <p><a href="https://twitter.com/MorawieckiM/status/1503782996444340224">莫拉维茨基还称</a>，乌克兰正在进行的是“自由与暴政的对决”，所有人的未来都悬而未决，希望通过此行传达出欧盟支持乌克兰的讯号。欧盟方面称，三国领导人此行没有肩负任何使命。</p>
-<p>泽连斯基昨日稍早前在与军方的<a href="https://ca.news.yahoo.com/zelenskyy-says-ukraine-must-admit-153735208.html">会议上称</a>，多年来北约一直说“敞开大门”，但乌克兰听到的答复是“我们不能加入”。他称，这是一个必须承认的事实，乌克兰“只能依靠自己和帮助我们的伙伴”。</p>
+<p>泽连斯基昨日稍早前在与军方的<a href="https://ca.news.yahoo.com/zelenskyy-says-ukraine-must-admit-153735208.html">会议上称</a>，多年来北约一直说“敞开大门”，但听说乌克兰已经无法加入。他称这是乌克兰必须承认的事实，他很欣慰乌克兰国民已经意识到这一点，乌克兰“只能依靠自己和帮助我们的伙伴”。</p>
 <h3>拜登将前往出席3月24日北约会议</h3>
 <p>白宫新闻秘书<a href="https://www.reuters.com/world/europe/us-warns-china-against-helping-russia-sanctions-mount-2022-03-15/">普萨基周二宣布</a>，拜登将前往出席3月24日在布鲁塞尔北约总部举行的会议，讨论乌克兰局势。</p>
 <p>自从2月24日战争爆发以来，俄军未能占领乌克兰前十大城市的任何一个。不过首都基辅已遭到俄军轰炸，乌方指周二对基辅的轰炸造成至少五人死亡。</p>
@@ -38,7 +38,7 @@ author:
 <p>日本政府此前已规定提高对高性能半导体等逾200种商品的出口审查，今次措施将全面禁止向俄罗斯军事相关团体及其他企业出口，防止经济制裁出现漏洞。</p>
 <h3>美国Fox新闻两记者在乌克兰遇难</h3>
 <p>美国Fox新闻台两名记者在乌克兰基辅西北郊城镇戈连卡（Horenka）<a href="https://www.bbc.com/news/world-us-canada-60756503">因汽车遭炮击遇难</a>，分别是55岁的资深摄影记者皮埃尔·扎克泽夫斯基（Pierre Zakrzewski）和24岁的萨沙·库夫希诺娃（Sasha Kuvshinova）。</p>
-<p>另一名39岁的记者同事本杰明·霍尔（Benjamin Hall）在袭击中受伤，被送医医疗。</p>
+<p>另一名39岁的记者同事本杰明·霍尔（Benjamin Hall）在袭击中受伤，被送医院治疗。</p>
 <p>Fox新闻台CEO苏珊娜·斯科特（Suzanne Scott）形容这是悲痛的一天。</p>
 <p>她介绍，<a href="https://www.foxnews.com/world/fox-news-cameraman-pierre-zakrzewski-killed-ukraine">扎克泽夫斯基</a>是一名很有才华的资深战地记者，曾在伊拉克、阿富汗、叙利亚报导新闻。年仅24岁的<a href="https://www.foxnews.com/media/ukrainian-journalist-oleksandra-kuvshinova-killed-attack">库夫希诺娃</a>为记者团队担任顾问，收集并对接当地信息，她勤奋、幽默、善良、勇敢。</p>
 <h3>俄罗斯宣布启动退出欧洲委员会程序</h3>
