Update VOCUS 2022-03-17 patch

--- a/_posts/2022-03-16-VOCUS-石油危機五十年.html
+++ b/_posts/2022-03-16-VOCUS-石油危機五十年.html
@@ -8,13 +8,7 @@ tags: blog
 author: REDBRIC
 ---
 
-<div class="draft-block draft--p left">
-            
-          </div>
-<div class="embed-block-prerender" data-url="https://youtu.be/ivr1DjDDgNI"></div>
-<div class="draft-block draft--p left">
-            
-          </div>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/ivr1DjDDgNI" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="522" height="294" frameborder="0"></iframe>            
 <div class="draft-block draft--p left">
             二次世界大戰結束後，全球在重建國際關係上建立了多項重要制度，包括成立聯合國，簽定布雷頓森林協議，確立國際貿易關係的關貿總協定及通過以美元為中心的類金本位貨幣制度等，為二戰後的二十五年帶來經濟復甦。
           </div>
@@ -45,7 +39,8 @@ author: REDBRIC
 <div class="draft-block draft--p left">
             自2022年2月24日俄羅斯入侵烏克蘭以來，國際原油(Crude Oil)價格已由大約每桶90美元上升至3月8日的124美元 (圖1)，有市場分析估計石油價格將會衝破200美元，導致全球通脹進一步加劇。
           </div>
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/bd2d61cb-9bdc-427e-b372-61d3c7465c7f.png" data-width="746" data-height="468" data-caption="圖1 原油價格2022年2月-3月。來源：Trading Economics" data-position="center"></div>
+<img src="https://images.vocus.cc/bd2d61cb-9bdc-427e-b372-61d3c7465c7f.png" alt="圖1 原油價格2022年2月-3月。來源：Trading Economics">
+<div>圖1 原油價格2022年2月-3月。來源：Trading Economics</div>
 <h3 class="draft-block draft--h3">
             石油武器化
           </h3>
@@ -55,7 +50,8 @@ author: REDBRIC
 <div class="draft-block draft--p left">
             2020年初，油價突然由大約60美元急插至前所未見的負值：低於-25元，即可免費買油兼有回贈！當時是免費兼有錢送都無人要貨，這一現象並非傳統供求定律可以合理解釋，更非疫情所能解釋(因為疫情至今仍然嚴重)，內裡與石油生產國之間的糾紛有關，亦受衍生工具交易及儲存成本等因素影響，有機會再與大家詳細討論。然而，過不了兩年，疫情仍未過去，油價卻又突然因為一場人為的戰爭而颷過百元界線。
           </div>
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/dc58f124-17bc-4e24-bce1-f286c633635e.png" data-width="746" data-height="468" data-caption="圖2 原油價格2018-2022。來源：Trading Economics" data-position="center"></div>
+<img src="https://images.vocus.cc/dc58f124-17bc-4e24-bce1-f286c633635e.png" alt="圖2 原油價格2018-2022。來源：Trading Economics">
+<div>圖2 原油價格2018-2022。來源：Trading Economics</div>
 <h3 class="draft-block draft--h3">
             能源供應的戰略考慮
           </h3>
@@ -68,7 +64,8 @@ author: REDBRIC
 <div class="draft-block draft--p left">
             這是美國在2008年後因頁岩油開採技術出現革命性的突破，開採成本大幅下降，刺激美國油氣產量大幅增加，更令美國在『2017年美國天然氣實現首次淨出口，2019年11月更正式成為原油淨出口國』(自由財經，2022)。今次的石油危機最終會如何解決，油價最高會否衝破上次的歷史高位？大家拭目以待。
           </div>
-<div style="height:400px" class="image-block-prerender draft--imgNormal draft-block" data-src="https://images.vocus.cc/22958d13-ccf6-4a7b-b929-32fb1205a8eb.png" data-width="746" data-height="468" data-caption="圖3 原油價格1998-2022。來源：Trading Economics" data-position="center"></div>
+<img src="https://images.vocus.cc/22958d13-ccf6-4a7b-b929-32fb1205a8eb.png" alt="圖3 原油價格1998-2022。來源：Trading Economics">
+<div>圖3 原油價格1998-2022。來源：Trading Economics</div>
 <div class="draft-block draft--p left">
             參考
           </div>
