--- a/_posts/2022-03-15-VOCUS-丁蟹回歸-香港地震.html
+++ b/_posts/2022-03-15-VOCUS-丁蟹回歸-香港地震.html
@@ -13,7 +13,7 @@ author: REDBRIC
 <div class="draft-block draft--p left">加上俄烏戰爭，地緣政治風險颷升，糧食及石油價格應聲彈上，通脹更是雪上加霜，歐洲受到戰火的影響最大，歐洲股市曾出現下挫。然而，比對歐美股市，在過去一個月，香港的恆指跌幅比歐美的主要股市的跌幅要大得多，尤其是3月14日起，香港地震後股市的跌勢進一步加劇，至今未止。</div>
 <div class="draft-block draft--p left">圖1比較在過去一個月的香港恆生指數(深藍線)、美國Dow Jones指數(黃線)、德國Dax指數(淺藍線)、英國FTSE指數(橙線)、紐西蘭NZX50指數的跌幅(紫線)，五大股市在過去一個月全部報跌，無一幸免；但香港恆指的跌幅最大，達到-25.5%，相反，紐美英德的股價跌幅分別為 -2.6%、-5.8%、-6.8%、-11.3%。</div>
 <div class="draft-block draft--p left">德國DAX指數在過去數周的變化大致與香港的恆指相似，但最近幾天出現明顯分歧，德國DAX指數未有像香港恆指般急遽下跌，反而有止跌回穩。而英美股市的跌幅相對輕微。換言之，即使計及戰火和通脹等風險，香港股市仍比歐美的跌幅跌多15%以上！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/72d1f486-f41f-48d5-80b5-d7747e84b78f.png" data-width="830" data-height="796" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖1 比較在過去一個月的香港恆生指數(深藍線)、美國Dow Jones指數(黃線)、德國Dax指數(淺藍線)、英國FTSE指數(橙線)、紐西蘭NZX50指數的跌幅(紫線)。來源：Google Finance</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/72d1f486-f41f-48d5-80b5-d7747e84b78f.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖1 比較在過去一個月的香港恆生指數(深藍線)、美國Dow Jones指數(黃線)、德國Dax指數(淺藍線)、英國FTSE指數(橙線)、紐西蘭NZX50指數的跌幅(紫線)。來源：Google Finance</figcaption></div>
 <div class="draft-block draft--p left">到底是甚麼獨特的原因導致香港恆指的跌幅遠超歐美？這必然是與本地的因素有關，而非國際因素。近日香港與中國內地的疫情轉趨嚴峻，更有不少省市需要實施全面封城禁足，而歐美澳紐等地卻在逐步開放，解除與防疫相關的限制，此消彼長，可能合理地解釋部份香港股市下跌的原因。</div>
 <div class="draft-block draft--p left">然而，跌幅較大的幾家公司均是在港美雙重上市(dual-listing)的中國科技企業股票，有外媒報導認為是與在美退市的前景憂慮有關，原文引述如下：</div>
 <div class="draft-block draft--p left">"As investors continued to assess the prospect of potential delistings from U.S. exchanges, dual-listed Chinese tech stocks in Hong Kong sat in deep negative territory: Alibaba was 11.5% lower while JD.com fell 9.94% and NetEase shed 7.93%.</div>
@@ -21,5 +21,3 @@ author: REDBRIC
 <div class="draft-block draft--p left">到底這是否真正原因仍有待驗證，但無論如何2022年都是世界巨變的一年，不但面對嚴重滯脹、更是戰爭不斷、疫症加劇和嚴苛政策等多項夾擊同時出現，經濟難以正常運作，股市自然易跌難升。</div>
 <div class="draft-block draft--p left">參考</div>
 <div class="draft-block draft--p left">CNBC (2022) Hong Kong’s Hang Seng index drops 6% as tech stocks fall; oil prices down more than 5%，CNBC，Mar 14，https://www.cnbc.com/2022/03/15/asia-markets-china-economy-russia-ukraine-war-currencies-oil.html</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
