--- a/_posts/2022-03-17-INMEDIA-觀塘診所賣疫苗豁免證明書-警放蛇拘兩女子涉偽造文書.html
+++ b/_posts/2022-03-17-INMEDIA-觀塘診所賣疫苗豁免證明書-警放蛇拘兩女子涉偽造文書.html
@@ -11,9 +11,7 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_3.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 警方將軍澳警區早前接獲舉報，指有診所在未有診症及檢視病歷下，向市民出售及簽發偽造的新冠疫苗醫學豁免證明書。警方昨日「放蛇」拘捕兩名女子，二人涉嫌干犯串謀偽造文書罪。</p>
 <p>政府在2月24日實施疫苗通行證，市民須持接種疫苗的證明才可進入特定處所。警方昨日採取命為「闖將」行動，在觀塘一間診所拘捕一名28歲陳姓女護士，及後在屯門區另一間診所拘捕一名69歲李姓女負責人。</p>
 <p>將軍澳警區重案組主管蘇子淵指，警方人員以通訊軟件接觸一名陳姓醫生，並向對方表明沒有任何健康問題，只想取得新冠疫苗醫學豁免證明書，以免接觸疫苗；對方及後同意簽發，並指示到位於觀塘的一間診所領取。</p>
-<p>警員遂「放蛇」喬裝成求診者到診所，發現診所內並沒有該名醫生，只有一名女護士；警員在付款後獲發醫生姓名及簽署的醫學豁免證明書，但全程未有醫生作診症或檢視其醫學記錄。</p>
-<p>警方在搜查診所後又發現，有30封同類型的豁免證明書、兩個醫生姓名簽署及印章和付款記錄等。</p>
+<p>警員遂「放蛇」喬裝成求診者到診所，發現診所內並沒有該名醫生，只有一名女護士；警員在付款後獲發醫生姓名及簽署的醫學豁免證明書，但全程未有醫生作診症或檢視其醫學記錄。警方在搜查診所後又發現，有30封同類型的豁免證明書、兩個醫生姓名簽署及印章和付款記錄等。</p>
 <p>警方表示，相信診所已簽發數百張類似的豁免證明書，又指該名涉案的陳姓男醫生在去年6月已離港，相信在簽發證明書其間，對方並不在港，並指他有相當長的行醫時間。警方提到，該名醫生在離港後仍有作網上會診，但涉及簽發疫苗醫學豁免證明書則未有作會診。</p>
-<p>將軍澳警區助理指揮官（刑事）曾俊傑指該名醫生不但涉嫌違法，更譴責其行為是不道德，考慮將其個案轉交醫務委員會。</p>
-<p>警方警告，市民如使用偽造的醫學豁免證明書同屬犯罪，一經定罪最高可被判監14年。</p>
+<p>將軍澳警區助理指揮官（刑事）曾俊傑指該名醫生不但涉嫌違法，更譴責其行為是不道德，考慮將其個案轉交醫務委員會。警方警告，市民如使用偽造的醫學豁免證明書同屬犯罪，一經定罪最高可被判監14年。</p>
 </div></div></div>
