--- a/_posts/2022-03-17-INMEDIA-記者問投訴內地醫護機制遭網軍圍攻-now新聞台發道歉聲明.html
+++ b/_posts/2022-03-17-INMEDIA-記者問投訴內地醫護機制遭網軍圍攻-now新聞台發道歉聲明.html
@@ -8,12 +8,15 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220317NOW.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>內地醫護獲港府豁免註冊，來港協助抗疫，洐生醫療事故處理問題。《Now新聞》記者昨在<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%8C%89%E7%8F%BE%E8%A1%8C%E6%A9%9F%E5%88%B6%E8%99%95%E7%90%86%E5%85%A7%E5%9C%B0%E9%86%AB%E8%AD%B7%E6%8A%95%E8%A8%B4-%E8%A1%9E%E7%94%9F%E9%98%B2%E8%AD%B7%E4%B8%AD%E5%BF%83%EF%BC%9A%E6%87%89%E6%9C%AC%E8%91%97%E6%84%9F%E8%AC%9D%E7%9A%84%E5%BF%83">疫情記者會</a>問，市民在治療期間一旦遇到問題，或不幸遇上醫療事故，應如何投訴，要求醫管局交代投訴流程。有團體在網上發動聯署投訴，聲言提問散播仇恨內地醫護，更稱可能觸犯《港區國安法》。《Now新聞台》中午發出聲明，指記者提問引起市民「關注及不滿」，並對此深感抱歉。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220317NOW.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>內地醫護獲港府豁免註冊，來港協助抗疫，洐生醫療事故處理問題。《Now新聞》記者昨在<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%8C%89%E7%8F%BE%E8%A1%8C%E6%A9%9F%E5%88%B6%E8%99%95%E7%90%86%E5%85%A7%E5%9C%B0%E9%86%AB%E8%AD%B7%E6%8A%95%E8%A8%B4-%E8%A1%9E%E7%94%9F%E9%98%B2%E8%AD%B7%E4%B8%AD%E5%BF%83%EF%BC%9A%E6%87%89%E6%9C%AC%E8%91%97%E6%84%9F%E8%AC%9D%E7%9A%84%E5%BF%83">疫情記者會</a>問，市民在治療期間一旦遇到問題，或不幸遇上醫療事故，應如何投訴，要求醫管局交代投訴流程。有團體在網上發動聯署投訴，聲言提問散播仇恨內地醫護，更稱可能觸犯《港區國安法》。《Now新聞台》中午發出聲明，指記者提問引起市民「關注及不滿」，並對此深感抱歉。記協對有記者因提問而遭受攻擊，發聲明表達憂慮。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1Myf96" title="螢幕截圖 2022-03-17 14.34.41"><img src="https://live.staticflickr.com/65535/51943790055_953597d089_z.jpg" width="551" alt="螢幕截圖 2022-03-17 14.34.41" /></a></p>
 <p>《Now新聞台》的道歉聲明指，「本台記者有關內地醫護的提問引起市民關注及不滿，我們深感抱歉」，又指「我們非常感謝中央和內地的無私支援」，將會繼續同心協力支持各界抗疫行動，早日戰勝疫情。聲明最後指，《Now新聞台》將「繼續虛心接受市民的監察及批評」。</p>
+<p>記協：提問具公共價值</p>
+<p>香港記者協會下午發聲明，表示對記者因提問遭受攻擊感擔憂；並對《Now新聞》台發出道歉聲明表示遺憾，憂慮此舉加劇編採人員的自我審查。記協引述 《Now新聞》記者於記者會上提問內容，指提問基於公眾知情權及公眾利益，並提及3月15日已有立法會議員（選委會）鄧飛在立法會委員會提出相關問題。</p>
+<p>記協強調，記者向政府官員直接提問，目的是讓官員向公眾解說政策，指出《Now新聞》記者提問兩度獲政府官員正面回應，肯定提問價值。記協盼望社會各界能理解新聞操作，並不帶個人政治立場及「有色眼鏡」評論新聞工作，重申記者提問尖銳不代表傳媒本身具既定立場。記協對《Now新聞》的道歉聲明表示遺憾，因為從新聞學上，該提問及報道沒有犯錯，亦有公共價值。傳媒理應不畏爭議，提出其認為與公眾利益有關的問題。而作為僱主，《now新聞》此舉，無疑將加劇編採人員的自我審查。</p>
 <p>有關該條被指「散播仇恨」的問題，《Now新聞》記者昨日向醫管局問道，如果市民在治療過程中，遇到問題想投訴內地醫護，或不幸遇上醫療事故，可以向誰投訴、流程是如何。衞生防護中心總監徐樂堅則稱，市民應本著感謝的心，醫管局總行政經理劉家獻補充病人可向病人聯絡部反映意見。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4V27g7" title="螢幕截圖 2022-03-17 14.50.49"><img src="https://live.staticflickr.com/65535/51943792155_85e8080907_z.jpg" width="640" alt="螢幕截圖 2022-03-17 14.50.49" /></a></p>
-<p>該提問惹起「愛國陣營」，其中「香港政研會」昨日將女記者樣貌放上網，並發起聯署投訴，稱記者提問「不專業」，要求《NowTV》新聞部管理層交待機構立場，並要求解僱該記者。全國政協副主席梁振英亦在FB，向女記者人身攻擊，稱對方「不是腦袋出了問題，就是心術不正」。</p>
+<p>該提問惹起「愛國陣營」，其中「香港政研會」昨日將女記者樣貌放上網，並發起聯署投訴，稱記者提問「不專業」，要求《NowTV》新聞部管理層交代機構立場，並要求解僱該記者。全國政協副主席梁振英亦在 Facebook，向女記者作人身攻擊，稱對方「不是腦袋出了問題，就是心術不正」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5Bw38y" title="螢幕截圖 2022-03-17 14.51.46"><img src="https://live.staticflickr.com/65535/51942197037_c5b1b1ed40_z.jpg" width="583" alt="螢幕截圖 2022-03-17 14.51.46" /></a></p>
 <p><strong>葛珮帆：要懷着感謝嘅心</strong></p>
 <p>民建聯今早在一個記者會上被問，會否認為《Now新聞》的提問是散播對內地醫護仇恨，葛珮帆指內地醫護要離鄉別井、冒著風險來港，加上要在香港接受「閉環處理」、「係一個犧牲嚟」，她指現在最重要「懷着感謝嘅心，感謝內地醫護人員嚟香港」，又指媒體應正面報道，「唔好用負面，用一啲會引起民憤嘅方式去評價」。</p>
