--- a/_posts/2022-03-16-INITIUM-禁足传言引发抢购潮-买多一个雪柜来囤货-恐惧源于不信任政府.html
+++ b/_posts/2022-03-16-INITIUM-禁足传言引发抢购潮-买多一个雪柜来囤货-恐惧源于不信任政府.html
@@ -8,7 +8,7 @@ tags: blog
 author: 特约撰稿人 陈欣陶、实习记者 钟健华 发自香港
 ---
 
-<p>「“放眼望去，（摆放卫生巾的）的货架都是空的。人们好像疯了一样般，疯狂购物。”」</p><p>特约撰稿人 陈欣陶、实习记者 钟健华 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220317-hongkong-people-are-stockpiling/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/5aeddba8d3e745c893815ddbe681d2e0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月1日，铜锣湾一间超市挤满购物的市民。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“放眼望去，（摆放卫生巾的）货架都是空的。人们好像疯了一样般，疯狂购物。”」</p><p>特约撰稿人 陈欣陶、实习记者 钟健华 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220317-hongkong-people-are-stockpiling/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/5aeddba8d3e745c893815ddbe681d2e0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月1日，铜锣湾一间超市挤满购物的市民。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年3月1日，铜锣湾一间超市挤满购物的市民。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p>在人烟稀疏的街上，一位老太太独力拿着4大包10卷装的卫生纸，往家的方向走去。身型矮小的她，拿着超过她身高一半的4大包重担，显得颇为吃力。好不容易到达闸门，她狼狈地放下手上的货物，按了几下密码锁，拉开门，用脚顶着门板，再拿起卫生纸，步履蹒跚的进门。</p>
 <p>街头的对面有另一个只身到超市的中年汉，他把车停泊在超市对开的路边，进去买了7、8袋大包小包的，全是食品、调味料和日用品。他努力把战利品塞到车厢后座，座位、地板，差不多没多余空隙。</p>
 <p>第五波疫情来势汹汹，疫情严竣，本来市民减少外出，部分商店和街道如空城般一片死寂；直至2月底特首林郑月娥宣布将举行全民强制检测，随后一段有关禁足传闻的录音在市民间流传，情况大幅扭转，大批市民蜂涌至超市、百货公司、街市等，抢购杂货粮油，哪怕确诊人数每天步步攀升，单日过万人染疫。</p>
