--- a/_posts/2022-03-17-VOCUS-技術者-戴姆勒.html
+++ b/_posts/2022-03-17-VOCUS-技術者-戴姆勒.html
@@ -8,4 +8,31 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<blockquote>Das Beste oder nichts!</blockquote>
+<p>請配上《獵殺紅色十月》（The Hunt for Red October）電影開場的濾鏡，</p>
+<blockquote>The best or nothing at all!</blockquote>
+<img src="https://images.vocus.cc/eb4fd064-6322-4036-a6cf-c5e5c72357ec.png">
+<p>3月17日誕生的不朽名匠，「技術者」戴姆勒 （Gottlieb Daimler，1834－1900）</p>
+<p>與Maybach、Otto跟Benz並列日耳曼工業史上四大天王，戴姆勒出生在昔日德意志邦聯的符騰堡王國（Württemberg，位於今德國西南部）紹恩多夫（Schorndorf）。身為麵包師傅的兒子，年少時期的戴姆勒，依循德國人的教育傳統，接受了完整且紮實的師徒培訓制度，並從原先的製槍師轉投身於研發輕型內燃機的行列，為求跟上製程的新潮流與新技術，他還隻身前往法國、英國等地進修，觀摩外國車床和蒸氣渦輪等劃時代的工藝製品…</p>
+<p>西元十九世紀八零年代，一個所有工程師無一不追逐人類增加活動範圍的奔馳年代，西元1885年，戴姆勒成功地在舊有的腳踏車上安裝了一具可供前進的內燃機組，達到了人們不再只倚靠己身氣力（腳力）前行的里程碑！他更以汽油作為燃料動力，取得了獨家的德國官方專利權。</p>
+<img src="https://images.vocus.cc/0e603ae7-0913-40b5-83a5-76ac33a203af.jpg">
+<p>這部被視為當年最高科技的「未來」產物，「Reitwagen」（意為riding car），是，<b>來賓請掌聲鼓勵！正是人類歷史上第一輛真正實用性的「歐兜麥」（Motorcycle）！</b>雖說，早在西元1869年間，法國和美國的技師已勾勒出原始的雙輪機車雛型，但那是用蒸汽機驅動，並非是汽油版本，因此戴姆勒贏得了「the father of the motorcycle」、「歐兜麥之父」的封號。</p>
+<p>話雖如此，大家可別以為這輛「Reitwagen」像速克達小綿羊或打檔重機一樣，把手往後一催就全油門一拜…<b>並沒有！</b>車重90公斤，排氣量高達264c.c.的戴姆勒摩托車，其輸出馬力呢，僅僅只有0.5匹馬力（600轉時），方正的外觀與複雜的機械排列，最高時速也才11公里左右，<b>加上帶著一股濃厚古代木製文物的氣息下，後輩的文學家居然將其工藝結晶描述成…「酷刑工具」呢！呵呵。</b></p>
+<p>很快地，戴姆勒再接再厲，在好友兼事業夥伴麥巴赫（Wilhelm Maybach，1846－1929）的齊心合作下，兩人藉由一家廢棄的飯店，利用原本屬於宴會廳和花園的寬敞空間，加上其他12位技師和5位學徒的共同參與，在西元1886年3月時，眾人將一組起初被設計用以進行長時間運轉測試的新式汽油內燃機引擎完整移植到了一台四輪馬車專用的美國製大型車架之上，並以此作為底盤開發基礎，<b>以當世所謂「不可思議、無法想像」（德國媒體戲稱戴姆勒、麥巴赫和撒旦之間進行了暗盤交易）的工法，用「黑科技」（「永恆族」傳授的？）之姿，組裝了第一輛搭載四顆輪子的汽車（four-wheel automobile）</b>，排氣量462c.c.，可輸出1.1匹馬力，最高時速來到了16公里，後續也順利通過了公路的實際測試。</p>
+<img src="https://images.vocus.cc/3dcea625-ddfe-4363-b23e-faaaf3e3e9ba.jpg">
+<p>這裡要來說個笑話，戴姆勒當時殷切期盼這組自製引擎能廣泛量產，以增加研究團隊的營收，所以也將其改良，運用在內河運輸的船舶上，更取得另一組新的專利權（船用發動機）；但保守的買主們大多擔心純汽油引擎可能會有爆炸風險，不敢輕易嘗試下水，因此戴姆勒動了一個鬼點子，他把陶瓷上蓋裝在引擎本體之外，將汽油發動機的外露部分巧妙地隱藏起來，然後告訴消費者：<b>嗯哼，這是全球最厲害的油電混合動力裝置，使用上安全無虞！</b></p>
+<img src="https://images.vocus.cc/a1ecbf01-0c27-465b-a8ec-6a7e5d3eb0c8.jpg">
+<p>西元1890年11月，戴姆勒與麥巴赫，加上在地火藥商與銀行家等，眾人決定合組內燃機引擎製造公司，戴姆勒為此親自繪製了一個「三芒星」的註冊商標，希望此發動機工廠所生產的各種引擎機組，日後能夠全面制霸陸、海、空，成為運輸市場上難以扳倒的帝王！但有趣的是，在民智未開，大家還是習慣搭乘馬車（不會爆炸！）的風氣之下，戴姆勒企業所自製的第一款四輪汽車，是直到了西元1892年時才真正找到首位買主！</p>
+<img src="https://images.vocus.cc/a774c788-62b4-4fc4-82ec-1f4d91d8d5af.jpg">
+<p>世人為紀念戴姆勒先生對於汽車工業的莫大貢獻，<b>在西元1978年時，他獲選進入位於美國底特律的「世界汽車名人堂」（Automotive Hall of Fame）</b>；而由戴姆勒所創辦的「DMG / Daimler-Motoren-Gesellschaft」，歷經百餘年的股權更替與接班團隊的世代傳承，西元2022年2月起，已正式更名為「Mercedes-Benz Group AG」，</p>
+<p>於德國法蘭克福證交所掛牌上市（代號：MBG），「Mercedes-Benz Group AG」是德國第二、世界第六大主要汽車集團，市值超過兩千八百億歐元（2020），雇用了28萬多名員工（2020），更是全球數一數二的全方位運輸服務與製造體，旗下握有眾多知名汽車品牌，包括Mercedes-Benz、Mercedes-Benz AMG、Mercedes-Benz Maybach等，同時也持有部分公司股份，如Aston Martin Lagonda。</p>
+<img src="https://images.vocus.cc/5679bf72-4223-43f4-a2af-098e06e16fa1.jpg">
+<p>尾聲：</p>
+<p>成立於西元1896年，英國老牌的汽車生產商「戴姆勒」（Daimler），是當時戴姆勒先生所授權其「Daimler-Motoren-Gesellschaft」引擎在英國特許銷售的同名廠牌，生產乘用房車跟巴士；</p>
+<p>後來戴姆勒先生使用「Mercedes」作為品牌名稱，英國的「Daimler」並未被要求順勢更名，因此就<b>變成了「德國性氏、英國品牌」的有趣現象。</b></p>
+<img src="https://images.vocus.cc/b1fa25b2-8477-4f95-acc8-ed949dfb42cb.jpg">
+<p><hr/></p>
+<p>圖文來源、一併致謝：</p>
+<p><a href="https://en.wikipedia.org/wiki/Gottlieb_Daimler">https://en.wikipedia.org/wiki/Gottlieb_Daimler</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Daimler_Reitwagen">https://en.wikipedia.org/wiki/Daimler_Reitwagen</a></p>
+<p><a href="https://www.logisticshalloffame.net/en/members/gottlieb-daimler">https://www.logisticshalloffame.net/en/members/gottlieb-daimler</a></p>
