--- a/_posts/2022-03-17-PQ-台灣基進攜手民間廠商-捐贈百萬無人機援助烏克蘭.html
+++ b/_posts/2022-03-17-PQ-台灣基進攜手民間廠商-捐贈百萬無人機援助烏克蘭.html
@@ -68,6 +68,10 @@ author: 林志鴻
 
 
 
+<p>新聞回顧：<a href="https://www.pourquoi.tw/?s=%E5%A4%A7%E7%96%86" target="_blank" rel="noreferrer noopener">中國公司大疆創新（DJI） 的相關報導</a></p>
+
+
+
 <p>美中貿易戰以後，從 5G 基礎設施開始，<strong>以美國為首的自由世界將各項科技產品生產鍊一項一項移出中國，資安和國安就是其中最重要的考量因素</strong>，也是台灣基進過去不斷呼籲與關注的議題。這次智動航科所捐贈的空拍機硬體來自台灣、軟體來自美國，因為屏除中國因素的影響，安全性才能夠得到保證。此次捐贈關鍵零組件非中國製的無人機除了想喚起更多民間愛心以外，也希望喚起大眾對中國製科技產品的警覺意識。</p>
 
 
