--- a/_posts/2022-03-18-INMEDIA-發展局-完善-城規程序-公眾諮詢兩輪變一輪-被揀中才可岀席會議.html
+++ b/_posts/2022-03-18-INMEDIA-發展局-完善-城規程序-公眾諮詢兩輪變一輪-被揀中才可岀席會議.html
@@ -11,12 +11,14 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/land.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>發展局擬修例精簡土地發展程序，提出多項修訂以「完善」城規程序，其中公眾諮詢將會由兩輪變成一輪，並要獲城規會揀中才可岀席會議作申述；及批准「邊填海，邊規劃」，更會限制《城市規劃條例》第12A改劃，即改變土地現時規劃用途申請，只可由土地擁有人或取得其同意人士、相關公職人員及公共機構提出。</p>
 <p>在發展局提交立法會的文件中，政府先建議將現時《城市規劃條例》下的製圖程序由17個月壓縮至約9個月，並容許公眾向城規會提交預先錄製影片的形式作出申述，並授權城規會成員如希望就個別申述作研究，才邀請申述人出席會議回答提問。</p>
 <p>長春社公共事務經理吳希文接受《港台》訪問時表示，由城規會「揀人」出席公聽會欠缺準則：「過往有啲講法，城規會委員嘅背景會偏向某一方，會唔會出現淨係揀咗一啲佢哋想聽嘅意見上去？最後出嚟嘅決策就唔得整全。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7CxJg3" title="無標題"><img src="https://live.staticflickr.com/65535/49868920761_2388651562_b.jpg" alt="無標題" /></a></p>
 <p><strong>未獲擁有人授權將不能提改劃  吳希文稱感可惜</strong></p>
 <p>在文件中，發展局亦表明正探討容許可局部核准草圖，及限制《城規條例》第12A改劃申請只可由土地擁有人或取得其同意人士、相關公職人員及公共機構提出；而賠償問題亦不會被視為有效申述，及考慮改為如反對者未能清楚描述其合法權益和聲稱所受的影響，該反對意見將屬無效。</p>
 <p>吳希文表示，對民間往後失去改劃土地用途的機會感到可惜，指民間提出的改劃申請有助保育，並提到多個由下而上的民間規劃個案，一直在醞釀規劃意識，包括景賢里、前政府總部西座：「你第一下可能係否決咗，但你見到今日成功保育到。」</p>
 <p><strong>准「邊填海邊規劃」  明日大嶼料受惠</strong></p>
 <p>當局建議明確授權部門可同步進行不同程序，即毋須等待為擬議填海土地擬備及核准法定圖則程序完成前，已可啟動填海計劃，認為可前至少9個月開展項目。在批准「邊填海，邊規劃」後，「明日大嶼」預計將能直接受惠。</p>
 <p>發展局的建議將在下星期二立法會發展事務委員會討論，民建聯立法會議員、立法會發展事務委員會副主席劉國勳指出，今次修訂可令「明日大嶼」工程受惠，預計「邊填海，邊規劃」能節省四至五年時間，長遠更能令香港生地變熟地加快三年。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/17102413197/in/photolist-2iYKfJD-s4hkRc-snzbJX-s4hkB4-s629b7-s6a4LR-hHSctT-hHSGfw/" title="11182301_859972414039798_914144365346595611_n"><img src="https://live.staticflickr.com/8714/17102413197_8a0b29af61_b.jpg" width="960" alt="11182301_859972414039798_914144365346595611_n" /></a></p>
 <p><strong>訂明政府對反對意見作回應次數上限</strong></p>
 <p>當局同時建議，就大型的道路、鐵路計劃及所有填海工程，處理反對意見的法定時限由17個月壓縮至約9個月，並建議在條例中明確規定反對意見的處理程序，例如訂明政府對每項有效反對意見作出回應的次數上限，反對者可在指定期限內如14天，提出進一步的意見。</p>
 <p>此外，發展局又要求避免重覆執行性質相近的程序，即如在其他法定機制下獲處理，該項意見及後將被視為已獲處理；並建議城規會在初次考慮改劃申請時邀請公眾提出意見的安排，認為可節省一個月的處理時間。</p>
