Update VOCUS 2022-03-19 patch

--- a/_posts/2022-03-18-VOCUS-楊千鶴遇上二二八與政治黑鍋-下-楊千鶴自傳-人生的三稜鏡.html
+++ b/_posts/2022-03-18-VOCUS-楊千鶴遇上二二八與政治黑鍋-下-楊千鶴自傳-人生的三稜鏡.html
@@ -11,7 +11,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">上次介紹台灣第一位女記者——楊千鶴，與 N 先生的曖昧一直沒有突破點。（旁人看得好急）​</div>
 <div class="draft-block draft--p left">綜觀他們身處的年代，感情還參雜了戰爭、族群、傳統價值觀等各種因素。小曖昧其實是大時代的縮影啊。（當事人應該覺得更苦）​</div>
 <div class="draft-block draft--p left">而且，真正的考驗不是遇到渣男，往後有更大的挑戰呢。​</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/3e24aa51-b5dd-4b12-9f0c-cbfb4cbb7973.png" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3e24aa51-b5dd-4b12-9f0c-cbfb4cbb7973.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3">羊羹的啟示​</h3>
 <div class="draft-block draft--p left">在楊千鶴生日宴會之後，兩人持續保持若有似無的曖昧關係。就在某天，N 先生突然說，他被派去馬尼拉出差，礙於戰爭機密的關係，沒辦法告訴楊千鶴太多資訊。​</div>
 <div class="draft-block draft--p left">有趣的是，N 先生託楊千鶴買羊羹寄去東京家裡。​</div>
@@ -67,9 +67,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">也很佩服楊千鶴經歷了如此多重大的年代，殖民、二戰、二二八、白色恐怖......，還有她身為女性、台灣人，傳統社會價值、殖民統治者的眼光，試圖成為她身上的枷鎖。​</div>
 <div class="draft-block draft--p left">但楊千鶴仍用她的方式，在困難中挺立生存下來。​</div>
 <div class="draft-block draft--p left">《人生的三稜鏡》真的是一本看了會充滿勇氣的自傳，希望大家會喜歡。</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/09830HScZSo"></div>
-<div class="draft-block draft--p left"></div>
+<iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" src="https://www.youtube.com/embed/09830HScZSo" width="640" height="360" frameborder="0"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 ZmUQI draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 bHwnUx draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dTIYWL"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛將零碎的歷史知識整理成小口包，分享給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 Youtube 頻道「<a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">熬夜的便當</a>」以及 IG <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">pan.yutang</a> 得到更多新的歷史小故事喔！</div>
