--- a/_posts/2022-03-17-PQ-中國遭冷落擺後面-下屆韓總統尹錫悅先跟美日澳印電話會談.html
+++ b/_posts/2022-03-17-PQ-中國遭冷落擺後面-下屆韓總統尹錫悅先跟美日澳印電話會談.html
@@ -24,11 +24,7 @@ author: 陳怡菱
 
 
 
-<p>文在寅總統當選後跟他國領袖電話會談的順序：<strong>美國</strong>→<strong>中國</strong>→<strong>日本</strong>→印度→<strong>俄羅斯</strong>→英國→德國→澳洲→法國</p>
-
-
-
-<p>尹錫悅總統當選後跟他國領袖電話會談的順序：<strong>美國</strong>→<strong>日本</strong>→英國→澳洲→印度。中國？</p>
+<p class="pqnote">文在寅總統當選後跟他國領袖電話會談的順序：<strong>美國</strong>→<strong>中國</strong>→<strong>日本</strong>→印度→<strong>俄羅斯</strong>→英國→德國→澳洲→法國<br><br>尹錫悅總統當選後跟他國領袖電話會談的順序：<strong>美國</strong>→<strong>日本</strong>→英國→澳洲→印度。中國？</p>
 
 
 
