--- a/_posts/2022-03-18-INMEDIA-建制區會副主席-指有團體買檢測包被拒-冀民政總署寬鬆審批.html
+++ b/_posts/2022-03-18-INMEDIA-建制區會副主席-指有團體買檢測包被拒-冀民政總署寬鬆審批.html
@@ -8,12 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 灣仔區議會聯同地區組織今（3月18日）由議員及義工，派發「蓮花青瘟膠囊」等防疫物資。灣仔區議會副主席林偉文向《獨媒》表示，目前負責審批民間團體撥款申請的民政事務總署，曾拒絕購買快速檢測劑申請，他盼總署能寬鬆審批抗疫活動的撥款申請。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 灣仔區議會聯同地區組織今（3月18日）由議員及義工，派發「連花清瘟膠囊」等防疫物資。灣仔區議會副主席林偉文向《獨媒》表示，目前負責審批民間團體撥款申請的民政事務總署，曾拒絕購買快速檢測劑申請，他盼總署能寬鬆審批抗疫活動的撥款申請。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/uQo28E" title="無標題"><img src="https://live.staticflickr.com/65535/51944366297_730e4196f8_z.jpg" width="640" alt="無標題" /></a></p>
 <p>灣仔區議會連同香港灣仔區各界協會、聖雅各福群會、灣仔浸信會愛羣社會服務處，今日在灣仔一帶唐樓由區議員及義工，向基層市民、精神病患者、獨居老人、傷健人士等居民，派發防疫物資。出席者包括灣仔區議會全體四名建制派議員，包括主席黃宏泰、副主席林偉文、謝偉俊及李碧儀，立法會議員易志明和管浩鳴亦在場。</p>
 <p>經歷區議員宣誓、大批民主派區議員辭職或被DQ後，民政事務局在去年10月宣布暫停第六屆區議會社區參與計劃及地區小型工程計劃撥款權，改由民政事務總署「直接」審批，過程並不如區議會般公開，區議員亦再無正式的審批撥款權。</p>
 <p>灣仔區議會副主席林偉文向《獨媒》表示，有地區團體「藍星行動」於本年三月初申請撥款，以低於市價的價錢購入快速檢測劑，但總署以市面上不缺同類型物品為由，拒絕了該申請。林偉文表示，派送快速檢測劑大大減低市民經濟負擔，與市民自行購買截然不同。他希望民政事務總署「多啲寬容」，酌情處理並寬鬆審批地區團體抗疫活動的撥款申請。</p>
 <p>在今日的派發活動上，灣仔區議會主席黃宏泰指灣仔區乃防疫工作重要的位置，「全港十八區嘅人都喺灣仔區返工」，又指區內將設置不同隔離設施，有機會令疫情擴散，故舉辦是次活動。他又提到政府「八八九九對付到」市民需要，區議會及地區組織可以「執漏」，處理「遺漏個案」。</p>
-<p>是次派發的防疫物資包有約20份，內有「連花青瘟膠囊」、口罩、快速測試劑、一公斤白米、麵、餅乾、茶包及湯包。</p>
+<p>是次派發的防疫物資包有約20份，內有「連花清瘟膠囊」、口罩、快速測試劑、一公斤白米、麵、餅乾、茶包及湯包。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0QkJ1L" title="無標題"><img src="https://live.staticflickr.com/65535/51945424413_471e804cee_z.jpg" width="640" alt="無標題" /></a></p>
 </div></div></div>
