--- a/_posts/2022-03-19-INMEDIA-九龍清真寺辦疫苗接種日-特設女性打針區域.html
+++ b/_posts/2022-03-19-INMEDIA-九龍清真寺辦疫苗接種日-特設女性打針區域.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/00j060" title="無標題"><img src="https://live.staticflickr.com/65535/51948093725_b2ebf184f1_z.jpg" width="640" alt="無標題" /></a><em>混合區域</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/31t02r" title="無標題"><img src="https://live.staticflickr.com/65535/51947557438_409031e932_z.jpg" width="640" alt="無標題" /></a><em>物資包</em></p>
 <p><strong>林琳：呢一件事我無話早或遲</strong></p>
-<p>公務員事務局局長聶德權，以及民建聯立法會議員張國鈞、鄭泳舜、葛珮帆和郭麗玲今日亦到場視察。協助安排的林琳表示，近日在派發防疫物資時，得知伊斯蘭教女信徒因為宗教原因，不便於公眾場所掀起衣袖而拒絕打針。她聯絡公務員事務局局長聶德權，安排開放清真寺為疫苗接種地方。</p>
+<p>公務員事務局局長聶德權，以及民建聯立法會議員張國鈞、鄭泳舜、葛珮帆和郭玲麗今日亦到場視察。協助安排的林琳表示，近日在派發防疫物資時，得知伊斯蘭教女信徒因為宗教原因，不便於公眾場所掀起衣袖而拒絕打針。她聯絡公務員事務局局長聶德權，安排開放清真寺為疫苗接種地方。</p>
 <p>她稱由構思到準備，只用了七日時間，而今日活動反應熱烈。昨日已有多於260人預約，即日籌亦派畢，將於4月9日再安排第二次接種活動。</p>
 <p>同有協助安排的青年發展委員會委員利哲宏表示，過往未曾察覺少數族裔會因宗教信仰而拒絕打針，今次安排是希望他們能「無壓力底下慢慢打針」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rkxQ7T" title="左：立法會宗教界選委艾歷斯，中：民建聯立法會選委會議員林琳，右：青年發展委員會委員利哲宏"><img src="https://live.staticflickr.com/65535/51948090875_b502d4d432_z.jpg" width="640" alt="左：立法會宗教界選委艾歷斯，中：民建聯立法會選委會議員林琳，右：青年發展委員會委員利哲宏" /></a><em>左：立法會宗教界選委艾歷斯，中：民建聯立法會選委會議員林琳，右：青年發展委員會委員利哲宏</em></p>
