--- a/_posts/2022-03-18-INMEDIA-美中元首通話討論烏克蘭局勢-習近平-國家關係不能夠走到兵戎相向這一步.html
+++ b/_posts/2022-03-18-INMEDIA-美中元首通話討論烏克蘭局勢-習近平-國家關係不能夠走到兵戎相向這一步.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>美國國務卿布林肯（Antony Blinken）在會面前曾指，拜登將明確傳達若中方支持俄羅斯侵略，須付出代價。他指，中國有責任捍衛國際規則與原則，卻一直拒絕譴責侵略行為，並「試圖將自身描繪成中立的仲裁者（seeking to portray itself as a neutral arbiter.）」布林肯表示，若中國以任何方式支持俄羅斯作出侵略，「我們將毫不猶豫讓中國付出代價（we will not hesitate to impose costs.）」</p>
 <p>中國外交部發言人趙立堅在主持例行記者會期間，回應有關指控，指中方一直本着客觀公正的態度，會根據事件本身作出判斷。他又反指美方應反思自己在烏克蘭危機中擔任的角色，作出實際行動緩和局勢，而非繼續火上加油，轉嫁矛盾。</p>
 <p><strong>俄羅斯入侵烏克蘭事件最新簡要</strong></p>
-<p>＊<a href="https://twitter.com/ash_stewart_/status/1504709235950641157?s=21">俄羅斯向烏克蘭西部城市利沃夫發射多枚導彈</a>，市內最少傳出三聲爆炸聲發冒出濃煙，並響起空襲警報。市長薩多維（Andriy Sadovy）其後表示，機場維修廠被多枚核彈擊中，並無造成傷亡。</p>
+<p>＊<a href="https://twitter.com/ash_stewart_/status/1504709235950641157?s=21">俄羅斯向烏克蘭西部城市利沃夫發射多枚導彈</a>，市內最少傳出三聲爆炸聲發冒出濃煙，並響起空襲警報。市長薩多維（Andriy Sadovy）其後表示，機場維修廠被多枚導彈擊中，並無造成傷亡。</p>
 <p>＊烏克蘭邊防局（State Border Guard Service of Ukraine）表示，<a href="https://twitter.com/dpsu_ua/status/1504497987556421640?s=21">至今已有近32萬烏克蘭公民，選擇回到家鄉對抗俄軍</a>，當中大部分為男性。</p>
 <p>＊<a href="https://www.theguardian.com/world/live/2022/mar/18/russia-ukraine-war-latest-news-biden-to-warn-xi-against-backing-putin-as-russian-military-offensives-falter-live?filterKeyEvents=false&amp;page=with:block-62346f348f08ee17b5371e3c#block-62346f348f08ee17b5371e3c">位於烏克蘭南部城市馬里烏波爾的劇院日前被炮轟</a>，烏克蘭頓內茨克（Donetsk）前州長塔魯塔在Facebook發文表示，劇院當時約有1300人，目前約130人獲救，傷亡數字未明。</p>
 <p>＊聯合國人權組織表示，自俄羅斯入侵以來，最少造成816名平民死亡，1,333人受傷，傷亡主要由導彈及空襲造成。組織指，未能掌握部分嚴重損毀城市，如馬里烏波爾的傷亡數字，故真實數字相信更高。</p>
