--- a/_posts/2022-03-19-INITIUM-文化抵制俄罗斯-迪士尼一反常态-netflix差点成了俄国大外宣.html
+++ b/_posts/2022-03-19-INITIUM-文化抵制俄罗斯-迪士尼一反常态-netflix差点成了俄国大外宣.html
@@ -8,7 +8,7 @@ tags: blog
 author: 特约撰稿人 叶郎 发自台北
 ---
 
-<p>「迪士尼、Netflix 或《蝙蝠侠》将告别俄罗斯，文化铁幕将重返俄罗斯，让俄罗斯人再度成为自己一个人的平行宇宙⋯⋯」</p><p>特约撰稿人 叶郎 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220320-culture-russian-movies-abandoned-by-world-industry/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/b16806217ad74078b748155210f7df1b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年2月27日，俄罗斯总统普京在莫斯科举行的就职典礼前，参观Dream Island时会见孤儿院和低收入家庭的孩子。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「迪士尼、Netflix 或《蝙蝠侠》将告别俄罗斯，文化铁幕将重新降下，让俄罗斯人再度成为自己一个人的平行宇宙⋯⋯」</p><p>特约撰稿人 叶郎 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220320-culture-russian-movies-abandoned-by-world-industry/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/b16806217ad74078b748155210f7df1b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年2月27日，俄罗斯总统普京在莫斯科举行的就职典礼前，参观Dream Island时会见孤儿院和低收入家庭的孩子。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2020年2月27日，俄罗斯总统普京在莫斯科举行的就职典礼前，参观Dream Island时会见孤儿院和低收入家庭的孩子。<span class="credit">摄：Sputnik/Aleksey Nikolskyi/Kremlin via Reuters/达志影像</span></figcaption></figure><p>俄罗斯入侵乌克兰的战事在不到一周内就牵连了1万公里外的好莱坞各大片厂，让他们纷纷宣布暂停在俄罗斯的制作和发行业务。</p>
 <p>如同日后忙碌进出中国市场的身影，好莱坞早从1980年代就处心积虑想要进入苏联／俄罗斯这个人口众多的潜力市场。虽然美国电影成功达阵的时间要比第一家进入苏联市场的美国品牌 Pepsi 百事晚了好几步，然而好莱坞落地生根的影响力并不输给后来一度成为俄罗斯国民饮料的百事可乐。</p>
 <p>如同《远离非洲》（Out of Africa）的开场白“我曾在非洲有个农场⋯⋯”，好莱坞各企业现在也必须一边感伤地回顾“我曾在俄罗斯有个电影事业”，一边匆忙地收拾细软暂离俄罗斯。</p>
