--- a/_posts/2022-03-21-INITIUM-不断更新-中国东航客机失事近九小时-尚未发现遇难者遗体.html
+++ b/_posts/2022-03-21-INITIUM-不断更新-中国东航客机失事近九小时-尚未发现遇难者遗体.html
@@ -23,6 +23,9 @@ author: 端传媒编辑部 发自新加坡
 <p>连接出发大厅和到达大厅的上下扶手电梯被黄色路障挡住，以避免乘客在扶手电梯上看见围挡内的情况。下午5点到达机场的一名女士告诉端传媒，陆续有家属到达接待区，大约晚上7点，有一位中年女士在接待区痛哭。随后，接待区的家属被安排上车接走，上车前，她听见机场工作人员问家属是否做了核酸。</p>
 <p>晚上10点一位在白云机场的管理层告诉端传媒记者，MU5735航班的大部分乘客不是广州居民，因此这里的家属并不多。他透露，善后的主要负责方是东方航空公司，后续家属会去广西梧州的坠机地点。晚上11点，接待区仍有家属在登记资料，现场并无喧嚣。一位机场基层工作人员告诉端传媒，接待区的围挡会在今晚撤掉。</p>
 <p>3月22日零时，一位唐姓男士从接待区走出，他告诉端傳媒，自己是航班上一位乘客的同事。他说，目前接待区仍有10多名家属。机场工作人员也透露，经由东方航空安排，一些家属已经入住了酒店。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220321-mainland-breaking-air-crash/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/561cddb629d0455087f294da05b0ff37.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月21日，广西，一架从昆明飞往广州的中国东方航空公司波音 737飞机坠毁现场看到飞机残骸。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年3月21日，广西，一架从昆明飞往广州的中国东方航空公司波音 737飞机坠毁现场看到飞机残骸。<span class="credit">摄：China Daily via Reuters/达志影像</span></figcaption></figure>
+
 <h2>救援：50余心理专家前往医疗救援</h2>
 <p>目前，广西梧州市消防救援支队已调派23辆消防车、117名消防救援人员前往救援，首支救援力量已抵达。广西消防救援总队调派南宁、柳州、桂林、北海、玉林、贵港、贺州、来宾、河池支队538名消防救援人员前往增援。</p>
 <p>新华社记者从南部战区了解到，南部战区已启动应急机制，梧州军分区、武警梧州支队已组织救援力量赶赴事故现场。陆军某陆航旅、某合成旅、某空中突击旅，空军某运搜旅，武警驻事发地周边力量等已完成备勤，随时准备支援。</p>
